@@ -1,3 +1,10 @@
+2022-06-12T08:13:12Z:
+* notice: last 14d: unq all: 4 28
+* notice: prev accum: outdated-unq outdated-all / unq all: 175 328 / 192 357
+* notice: next accum: outdated-unq outdated-all / unq all: 175 328 / 192 356
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +2 -0 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-05-29]
+
 2022-06-12T01:01:30Z:
 * notice: last 14d: unq all: 4 29
 * notice: prev accum: outdated-unq outdated-all / unq all: 175 328 / 192 356
